<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.ssmmhh.jibam.presentation.util.ToolbarLayoutListener" />

        <variable
            name="viewmodel"
            type="com.ssmmhh.jibam.presentation.setting.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e0e0e0"
        android:orientation="vertical"
        tools:context=".presentation.setting.SettingFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_with_back_btn_with_databinding"
            app:listener="@{listener}"
            app:toolbarTitle="@{@string/setting}" />

        <TextView
            android:id="@+id/calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:background="#fff"

            android:gravity="center|start"
            android:paddingLeft="8dp"
            android:paddingTop="16dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/calendar"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/calender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <RadioButton
                android:id="@+id/gregorian_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:checked="@={viewmodel.isGregorianChecked}"
                android:text="@string/gregorian"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/shamsi_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:checked="@={viewmodel.isSolarHijriChecked}"
                android:gravity="center|start"
                android:text="@string/solar_hijri"
                android:textSize="16sp" />


        </RadioGroup>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#323232" />


    </LinearLayout>
</layout>