<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/chartFragment"
        android:icon="@drawable/ic_outline_pie_chart_24"
        android:title="@string/chart" />
    <item
        android:id="@+id/viewCategoriesFragment"
        android:icon="@drawable/ic_category_setting"
        android:title="@string/category_setting" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />

    <item
        android:id="@+id/aboutUsFragment"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
</menu>