...
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mtrl_toolbar_default_height"
    android:background="@color/purple_500">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_normal"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_round_arrow_back_24">

        <ImageButton
...
