<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="end"
    android:orientation="horizontal"
    tools:background="?attr/colorPrimary">

    <ImageView
        android:id="@+id/month_manager_previous"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_round_navigate_before_24"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/toolbar_month"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        tools:text="May" />

    <ImageView
        android:id="@+id/month_manager_next"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_round_navigate_next_24"
        app:tint="?attr/colorOnPrimary" />


</LinearLayout>