...
        <variable
            name="onBackPressedCallback"
            type="androidx.activity.OnBackPressedCallback" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.transactions.TransactionsFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/fragment_transacion_root"
...
                            android:padding="4dp"
                            android:text="@string/income"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_income"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="50"
                            android:foregroundGravity="top|center"
                            android:gravity="top|center"

...
                            android:padding="4dp"
                            android:text="@string/expenses"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_expenses"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="50"

                            android:foregroundGravity="top|center"
                            android:gravity="top|center"
...
                            android:textColor="@color/black"
                            android:textSize="16sp"

                            />

                        <TextView
                            android:id="@+id/txt_balance"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="50"

                            android:foregroundGravity="top|center"
                            android:gravity="top|center"
...


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/main_standardBottomSheet"
                style="?attr/bottomSheetStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_bg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


                <FrameLayout
                    android:id="@+id/view_hastam"
                    android:layout_width="40dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center">

                    <View
                        android:id="@+id/view_hastam2"
...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageButton
                            android:id="@+id/main_bottom_sheet_back_arrow"
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="@{(view) -> onBackPressedCallback.handleOnBackPressed()}"
...
